[package]
name = "contract"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "2.0.4", features = ["staking"] }
sylvia = "1.1.0"
schemars = "0.8.16"
cosmwasm-schema = "2.0.4"
serde = { version = "1.0.198", default-features = false, features = ["derive"] }
cw-storage-plus = "2.0.0"
thiserror = "1.0.44"

[dev-dependencies]
sylvia = { version = "1.1.0", features = ["mt"] }
cw-multi-test = { version = "2.1.0", features = ["staking"] }
